[package]
name = "middleman-wasm"
version = "1.0.0"
authors = [ "yum0e",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.middleman]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.29.2"

[dependencies.elrond-wasm-output]
version = "0.29.2"
features = [ "wasm-output-mode",]
